<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layoutDirection="ltr"
    android:gravity="center"
    >
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/quest_noticed"
        android:textColor="@color/textColor"
        android:layout_margin="10dp"/>
    <androidx.appcompat.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/quest_spinner_prompt"
        android:id="@+id/quest_spinner"
        android:layout_marginHorizontal="@dimen/login_activity_margin"/>
    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        android:textDirection="ltr"
        android:layout_gravity="start"
        android:id="@+id/Add_cb"
        android:checked="false"
        android:text="@string/quest_cb_text"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="@dimen/login_activity_margin"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quest_input_hint"
        android:id="@+id/quest_input_layout"
        android:visibility="gone"
        android:layoutDirection="ltr"
        android:textDirection="ltr"
        android:layout_marginHorizontal="@dimen/login_activity_margin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:id="@+id/quest_input"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/answer_input"
        android:layoutDirection="ltr"
        android:textDirection="ltr"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="@dimen/login_activity_margin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/answer_input"
            android:lines="1"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:inputType="text"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:text="@string/save_btn"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:layout_margin="@dimen/login_activity_margin"
        android:id="@+id/save_btn"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/error_view"
        android:gravity="center"
        android:textColor="?attr/colorError"/>
</androidx.appcompat.widget.LinearLayoutCompat>