<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:gravity="center"
        >
    <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:text="@string/notice_tv1"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/login_activity_margin"
        android:textDirection="ltr"
        android:layoutDirection="ltr"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/new_password_input_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:lines="1"
            android:maxLines="1"
            android:id="@+id/new_password_input"
            android:inputType="textPassword"
            android:layout_marginVertical="@dimen/login_et_margin"
                />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="@dimen/login_activity_margin"
        android:textDirection="ltr"
        android:layoutDirection="ltr"
        app:endIconMode="password_toggle"
        android:hint="@string/confirm_password_input_hint"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:id="@+id/confirm_password_input"
            android:inputType="textPassword"
            android:layout_marginVertical="@dimen/login_et_margin"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/login_activity_margin"
            android:textAllCaps="false"
            android:background="@drawable/btn_bg"
            android:id="@+id/next_btn"
            android:text="@string/next_btn"
            android:textColor="@android:color/white"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/error_view"
        android:gravity="center"
        android:textColor="#B00020"/>
</androidx.appcompat.widget.LinearLayoutCompat>