<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layoutDirection="ltr"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    >
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usr_name_input_hint"
        app:startIconDrawable="@drawable/ic_user"
        android:layoutDirection="ltr"
        android:textDirection="ltr"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="@dimen/login_activity_margin">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:layoutDirection="ltr"
            android:textDirection="ltr"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:id="@+id/usr_name_input"
            android:layout_marginVertical="@dimen/login_et_margin"
                />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password_input_hint"
        app:startIconDrawable="@drawable/ic_password2"
        app:endIconMode="password_toggle"
        android:id="@+id/password_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="@dimen/login_activity_margin">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_input"
            android:lines="1"
            android:maxLines="1"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:layout_marginVertical="@dimen/login_et_margin"
                />
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:text="@string/login_btn"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_margin="@dimen/login_activity_margin"
            android:id="@+id/login_btn"/>
    <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_tv"
            android:textColor="@color/textColor"
            android:id="@+id/forget_tv"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/error_view"
        android:gravity="center"
        android:textColor="#B00020"/>
</LinearLayout>