<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layoutDirection="ltr"
    android:gravity="center"
        >
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/check_cred_layout"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="1"
            android:layout_marginHorizontal="@dimen/login_activity_margin"
            android:visibility="visible"
            android:textDirection="ltr"
            android:layoutDirection="ltr"
            android:hint="@string/old_pass_input"
            android:id="@+id/old_password_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/old_password_input"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:layout_marginVertical="@dimen/login_et_margin"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layoutDirection="ltr"
            android:textDirection="ltr"
            android:textColor="@color/textColor"
            android:layout_marginHorizontal="@dimen/login_activity_margin"
            android:id="@+id/question_tv"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:textDirection="ltr"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginHorizontal="@dimen/login_activity_margin"
            android:hint="@string/answer_input">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLines="1"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:layout_marginVertical="@dimen/login_activity_margin"
                android:id="@+id/answer_input"/>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/check_btn"
                android:layout_margin="@dimen/login_activity_margin"
                android:background="@drawable/btn_bg"
                android:textAllCaps="false"
                android:text="@string/check_btn"
                android:textColor="@android:color/white"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/error_view"
        android:gravity="center"
        android:textColor="#B00020"/>
</androidx.appcompat.widget.LinearLayoutCompat>